# repo-tui

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  KEYBOARD_SHORTCUTS.md  README.md  README.zh.md  config.toml.example  install.sh  rustfmt.toml  uninstall.sh
.github/workflows/: ci.yml  release.yml
.opencode/plans/: bugfix-20260307.md  cyclic-navigation.md  random-theme-feature.md
benches/: discovery_benchmark.rs  performance.rs  search.rs  startup.rs  theme_performance.rs
docs/: BUGFIX_EMPTY_PATH.md  BUGFIX_GIT_STATUS_DISPLAY.md  DEVELOPMENT_GUIDE.md  FIX_DIR_CHOOSER_SCROLL.md  FIX_EMPTY_PATH.md  FIX_PROGRESS.md  PATH_DISPLAY_FEATURE.md  PHASE0_COMPLETE.md  PHASE0_STATUS.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_THEME_LAYOUT_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_PLAN.md  PHASE4_TASK1_COMPLETE.md  PHASE4_TASK2_COMPLETE.md  PHASE4_TASK3_COMPLETE.md  PHASE5_COMPLETE.md  README.md  TEST_SUPPLEMENT_PLAN.md  THEME_SYSTEM_PLAN.md  TITLE_BAR_IMPLEMENTATION.md  design-phase1.md  ghclone-prd-v1.md  ghclone-prd-v2.md
docs/bugfix/: bugfix-2026-03-10-tui-claude-analysis-v1.md  bugfix-2026-03-10-tui-claude-solution-v1.md  bugfix-2026-03-10-tui-claude-verification-v1.md  bugfix-remove-q-key-analysis.md  index.md
docs/bugs/: bottom-hints-style-and-path-display.md  empty-path-validation.md  (+2 more)
src/: constants.rs  error.rs  lib.rs  main.rs
tests/: batch_operations.rs  config_migration_test.rs  directory_selection.rs  favorites.rs  integration_clone.rs  integration_keyboard_multi_dir.rs  integration_main_directory_management.rs  integration_multi_config_loading.rs  integration_repo_discovery_dedup.rs  integration_single_repo_management.rs  keyboard_navigation.rs  multi_directory_test.rs  path_display.rs  repo_list_rendering.rs  repo_source_test.rs  search_filtering.rs  theme_functional.rs  theme_selector.rs
workflows/: ci.yml
(+144 files in other folders)
